--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -7,8 +7,17 @@
      <h1>My First Webpage</h1>
      <h2>Written with a little guidance from Moringa School</h2>
 
-     
+
      <p>Hello,World!</p>
      <p> Welcome to my first webpage!</p>
-   </body>
+      
+
+     <p>Here are some things I,m going to learn about coding</p>
+  <ol>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+    <li>And a lot more!</li>
+  </ol>
+    </body>
  </html>
