add list elements

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -19,5 +19,18 @@
     <li>JavaScript</li>
     <li>And a lot more!</li>
   </ol>
+
+  <ul>
+    <li>Timothy Lidede</li>
+    <li>Kamjay</li>
+    <li>WMD</li>
+  </ul>
+
+
+  <ol>
+    <li>Chicken</li>
+    <li>Fries</li>
+    <li>Rice</li>
+  </ol>
     </body>
  </html>
