--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -2,17 +2,18 @@
 <html>
    <head>
      <title>My first webage!</title>
+     <link href="css/styles.css" rel="stylesheet" type="text/css">
    </head>
    <body>
      <h1>My First Webpage</h1>
-     <h2>Written with a little guidance from Moringa School</h2>
+     <h2>Written with a little guidance from <em>Moringa School</em></h2>
 
 
      <p>Hello,World!</p>
-     <p> Welcome to my first webpage!</p>
+     <p> Welcome to my<strong> first</strong> webpage!</p>
       
 
-     <p>Here are some things I,m going to learn about coding</p>
+     <p>Here are some things I'm going to learn about coding</p>
   <ol>
     <li>HTML</li>
     <li>CSS</li>
@@ -21,9 +22,9 @@
   </ol>
 
   <ul>
-    <li>Timothy Lidede</li>
-    <li>Kamjay</li>
-    <li>WMD</li>
+    <li><strong>Liidede</strong></li>
+    <li><em>Metro MV</em></li>
+    <li><strong>WMD</strong></li>
   </ul>
 
 
@@ -32,5 +33,5 @@
     <li>Fries</li>
     <li>Rice</li>
   </ol>
-    </body>
+    </body><p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p><p>Check out <a href="http://moringaschool.com/">Moringa School</a></p>
  </html>
